@@ -1,3 +1,7 @@
+2009-12-14  Noel O'Boyle
+
+	* src/GUI/OBGUI.cpp: Fix compilation on Linux.
+
 2009-12-11  Chris Morley
 
 	* include/openbabel/plugin.h, src/plugin.cpp: Make TypeID() virtual in
